fix: fix blinking on Safari

--- a/src/features/password/ui/password.module.css
+++ b/src/features/password/ui/password.module.css
@@ -30,6 +30,8 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+
+    transition: unset;
 }
 
 .reveal:checked {
